# mekhan

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-FSL  LICENSING.md  NOTICE  PLAN.md  README.md  SECURITY.md  clippy.toml  docker-compose.yml  flake.nix  justfile  mekhan.toml  openapi-mekhan.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
engine/: .envrc  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  justfile  justfilen  openapi.json
engine/bench/: Cargo.toml  README.md
engine/bench/src/: generators.rs  lib.rs  live.rs  metrics.rs  report.rs  synth_log.rs
engine/cli/: Cargo.toml
engine/cli/src/: activate.rs  bridges.rs  client.rs  commands.rs  errors.rs  events.rs  lib.rs  main.rs  report.rs  status.rs  trace.rs
engine/cli/tests/: integration.rs
engine/core-engine/: Cargo.toml
engine/core-engine/examples/: heap_probe.rs
engine/core-engine/scenarios/: cross_net_a.json  cross_net_b.json
engine/core-engine/src/: config.rs  hydration.rs  main.rs
engine/demos/invoice_processing/: validate_invoice.py
engine/demos/python/: expense_analyzer.py  train_model.py
engine/demos/research_brief/: gather_data.py
engine/docs/: ARCHITECTURE.md  README.md
engine/docs/adr/: 07-bridged-subnets.md  08-advisory-state-kv.md  09-namespaced-subjects.md  10-secret-management.md  11-scalability-retention.md  12-distributed-execution.md  13-net-lifecycle.md  14-terminal-places.md  15-lifecycle-events.md  16-hibernation.md  17-artifact-provenance.md  18-event-log-causality.md  19-tool-use-first-class.md  20-net-snapshots.md  21-offset-keyed-idempotent-ingress.md
engine/docs/engine/: air-format.md  bridge-meta-routing.md  execution-rules.md  scalability.md  streaming.md
engine/just/: bench.just  demo.just  infra.just  lib.sh
engine/lab-ui/: deno.json  package.json  playwright.config.ts  vite.config.ts
engine/notes/: bridge-validation-handoff.md
engine/scenarios/: booking-with-retry.json  order-state-machine.json  producer-consumer.json  resource-allocation.json
engine/sdk/: Cargo.toml
engine/sdk-derive/: Cargo.toml
engine/simulator/: Cargo.toml
executor/: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.netcdf  Dockerfile.netcdf.dockerignore  Dockerfile.sandbox-test  NOTICE  README.md  justfile
executor/docs/: README.md  architecture.md  backend-trait.md  configuration.md  execution-lifecycle.md  ipc-protocol.md  job-model.md  llm-vision.md  nats-contracts.md  run-directory.md  sandbox.md  storage.md  workspace-persistence.md
router/: Cargo.toml  README.md
router/src/: admission.rs  auth.rs  cancel.rs  config.rs  inventory.rs  lib.rs  main.rs  metering.rs  metrics.rs  openapi.rs  proxy.rs  routing.rs
router/tests/: scale_router_e2e.rs
service/: Cargo.toml  mekhan.toml
service/migrations/: 20240103000000_yjs_documents.sql  20240104000000_create_catalogue.sql  20240105000000_create_hpi_tables.sql  20240106000000_create_causality_tables.sql  20240107000000_rekey_hpi_to_process_id.sql  20240108000000_rename_correlation_id_to_signal_key.sql  20240109000000_add_signal_lineage.sql  20240110000000_store_event_payloads.sql  20240111000000_add_signal_key_to_hpi.sql  20240112000000_link_hpi_processes_to_instances.sql  20240113000000_create_auth_sessions.sql  20240114000000_add_template_source_ref.sql  20240115000000_add_instance_result.sql  20240116000000_template_interface_json.sql  20240117000000_step_execution.sql  20240118000000_template_tests.sql  20240119000000_template_tests_reference_scope.sql  20240120000000_create_resources.sql  20240121000000_resource_audit.sql  20240122000000_resource_oauth_tokens.sql  20240123000000_create_workspaces.sql  20240124000000_workspace_scope_templates.sql  20240125000000_create_projects_and_tags.sql  20240126000000_backfill_resources_workspace.sql  20240127000000_backfill_default_membership.sql  20240128000000_private_template_visibility.sql  20240129000000_rehome_demos_to_default_workspace.sql  20240130000000_subworkflow_instance_hierarchy.sql  20240131000000_workspace_default_datacenter.sql  20240132000000_allocations.sql  20240133000000_job_templates.sql  20240134000000_generalize_resource_scope.sql  20240134000000_runners.sql  20240135000000_capability_types.sql  20240135000000_job_template_container_resource.sql  20240136000000_asset_pins_usage_index.sql  20240136000000_image_materializations.sql  20240137000000_create_assets.sql  20240141000000_rename_pool_vocab.sql  20240142000000_workers.sql  (+63 more)
service/src/: bootstrap.rs  config.rs  demos.rs  hpi.rs  human_presence.rs  internal_pool.rs  lib.rs  lifecycle.rs  main.rs  model_serving_group.rs  nats.rs  observability.rs  openapi.rs  runner_commands.rs  runners_nats.rs  runners_presence.rs  s3.rs  worker_coverage.rs  worker_groups.rs
service/tests/: agent_loop_e2e.rs  agent_loop_live.rs  agent_lowering.rs  air_snapshots.rs  allocations_ingest_e2e.rs  analytics.rs  apply_air_e2e.rs  auth_middleware_tests.rs  auth_tokens.rs  automated_step_e2e.rs  backend_registry_coverage.rs  bff_session_tests.rs  cancel_frees_pool_lease_e2e.rs  catalogue_data_types.rs  catalogue_metadata_upgrade.rs  catalogue_query.rs  catalogue_query_e2e.rs  catalogue_tests.rs  catalogue_trigger_live_ingest_e2e.rs  causality_e2e.rs  causality_ingest.rs  cli_e2e.rs  clusters_handlers.rs  coalesce_backfill_e2e.rs  compiler_e2e.rs  compiler_tests.rs  composition_e2e.rs  container_lease_slurm_e2e.rs  coordinate_apply_e2e.rs  data_entries.rs  decision_e2e.rs  delay_e2e.rs  demos_reset_e2e.rs  dispatch_options_wire.rs  driver_migrate.rs  driver_pipeline.rs  dynamic_human_task_e2e.rs  email_keyed_identity_e2e.rs  error_paths.rs  file_servers.rs  (+62 more)
shared/aithericon-email/: Cargo.toml
shared/apalis/: AGENTS.md  CLAUDE.md  Cargo.toml
shared/backends/: Cargo.toml
shared/file-metadata/: CHANGELOG.md  Cargo.toml  NOTICE  README.md
shared/resources/: Cargo.toml
shared/resources-derive/: Cargo.toml
shared/secrets/: .gitignore  Cargo.toml  NOTICE  README.md
(+2801 files in other folders)
