[package]
name = "mekhan-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for petri-lab engine)
reqwest = { version = "0.12", features = ["json"] }

# NATS (lifecycle events, cleanup)
async-nats = "0.39"
futures = "0.3"

# Configuration
config = "0.15"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# SDK for compiling workflow graphs to AIR
aithericon-sdk = { path = "../petri-lab/sdk" }
schemars = "0.8"
petgraph = "0.6"

# Petri-net domain types (events, marking, tokens)
petri-domain = { path = "../petri-lab/core-engine/crates/domain" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
