# =============================================================================
# Aithericon Platform — umbrella workspace
# =============================================================================
# Cargo workspace at the monorepo root. Lists the deployable application crates
# as members. Sibling repos under engine/, executor/, shared/ keep their own
# [workspace] roots and are excluded here so cargo doesn't try to merge them —
# they remain reachable via path-deps from members.
#
# Why this exists:
#   `cross` mounts the workspace root into its Docker container. With everything
#   under aithericon-platform/, cross-musl builds can resolve `../../engine/...`
#   etc. without escaping the mount. This was previously impossible when each
#   repo lived as a top-level sibling of the others.

[workspace]
resolver = "2"

members = [
    "service",
    "router",
    "shared/backends",
    "shared/resources",
    "shared/resources-derive",
    "shared/inference-core",
]

exclude = [
    "app",
    "engine",
    "executor",
    "shared/secrets",
    "shared/apalis",
    "shared/file-metadata",
    "deploy",
    # Git worktrees live under .claude/worktrees/. Because this manifest is a
    # filesystem ancestor of every worktree, Cargo's workspace-root walk for a
    # worktree's nested sibling crates (engine/, executor/, shared/apalis/…)
    # escapes the worktree's own umbrella and gets captured *here* — the
    # exclude entries above are root-relative and don't match the deeper
    # `.claude/worktrees/<wt>/shared/apalis` path. Excluding `.claude` keeps
    # worktree builds resolving against their own in-worktree workspace roots.
    ".claude",
]
