[package]
name = "inference-router"
version = "0.1.0"
edition = "2021"
license = "FSL-1.1-ALv2"
description = "OpenAI-compatible inference router — the model-pool data plane (docs 11/29)."

[[bin]]
name = "inference-router"
path = "src/main.rs"

[dependencies]
inference-core = { path = "../shared/inference-core" }

axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
async-stream = "0.3"
async-nats = "0.39"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
