[package]
name = "mekhan-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mekhan"
path = "src/bin/cli/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query", "ws", "multipart"] }
# SSE stream generation
async-stream = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
urlencoding = "2"

# HTTP client (for petri-lab engine)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# NATS (lifecycle events, cleanup)
async-nats = "0.39"
shellexpand = "3"
futures = "0.3"

# Configuration
config = "0.15"

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait (for dyn-dispatchable async traits)
async-trait = "0.1"

# SDK for compiling workflow graphs to AIR
aithericon-sdk = { path = "../engine/sdk" }
schemars = "0.8"
petgraph = "0.6"

# Petri-net domain types (events, marking, tokens)
petri-domain = { path = "../engine/core-engine/crates/domain" }

# Petri-net API types (shared request/response DTOs for engine communication)
petri-api-types = { path = "../engine/core-engine/crates/api-types" }

# Executor backend config types (for compile-time validation of execution specs)
aithericon-executor-backend-configs = { path = "../executor/crates/executor-backend-configs" }

# Yjs CRDT for real-time collaborative editing
yrs = "0.21"

# Concurrent data structures
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive"] }
serde_yaml_ng = "0.10"
hcl-rs = "0.18"
indexmap = { version = "2", features = ["serde"] }

# WebSocket client (also used by CLI)
tokio-tungstenite = "0.24"

# S3 (MinIO-compatible object storage for artifact freeze)
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
