[package]
name = "mekhan-service"
version = "0.1.0"
edition = "2021"
# Source-available under the Functional Source License (FSL-1.1-ALv2):
# any use permitted except Competing Use; converts to Apache-2.0 after 2 years.
# See /LICENSE-FSL and /LICENSING.md.
license-file = "../LICENSE-FSL"

[[bin]]
name = "mekhan"
path = "src/bin/cli/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query", "ws", "multipart"] }
# SSE stream generation
async-stream = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["full"] }
# Typed cookie jar extractor for the BFF session cookie
axum-extra = { version = "0.10", features = ["cookie"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
urlencoding = "2"

# HTTP client (for petri-lab engine)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }

# NATS (lifecycle events, cleanup)
async-nats = "0.39"
shellexpand = "3"
futures = "0.3"

# Configuration
config = "0.15"

# IDs and time
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# BFF OIDC: CSPRNG for session ids / PKCE verifier / state / nonce,
# SHA-256 for the PKCE S256 challenge, base64url for opaque ids.
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# JWT validation (Zitadel adapter)
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait (for dyn-dispatchable async traits)
async-trait = "0.1"

# SDK for compiling workflow graphs to AIR
aithericon-sdk = { path = "../engine/sdk" }

# Typed Resource registry (built-in types: postgres, openai, slack, s3,
# google_oauth). The resolver in petri/resource_resolver.rs looks types up
# by name via `aithericon_resources::lookup`. The `vault` feature pulls in
# `VaultResourceStore` so the CRUD handlers can write Vault-backed secret
# storage when `VAULT_ADDR` is set.
aithericon-resources = { path = "../shared/resources", features = ["vault"] }

# Path-format regex for the B.9 Resource CRUD validator
# (`POST /api/v1/resources`).
regex = "1"

schemars = "0.8"
petgraph = "0.6"

# Rhai parser for guard scope validation (Phase 3 typed-ports). We only use the
# parser surface — `Engine::compile` returns an AST we walk for identifier
# resolution; we never evaluate guard scripts here.
rhai = { version = "1.19", features = ["sync", "serde"] }

# Cron schedule parsing for the trigger dispatcher (Phase 5b). `cron` is the
# parser; `chrono-tz` provides IANA timezone resolution.
cron = "0.12"
chrono-tz = "0.10"

# Petri-net domain types (events, marking, tokens)
petri-domain = { path = "../engine/core-engine/crates/domain" }

# Petri-net API types (shared request/response DTOs for engine communication)
petri-api-types = { path = "../engine/core-engine/crates/api-types" }

# Executor backend config types (for compile-time validation of execution specs)
aithericon-executor-backend-configs = { path = "../executor/crates/executor-backend-configs" }
aithericon-executor-domain = { path = "../executor/crates/executor-domain" }

# OpenAPI — typed spec generation for the SPA's typed client codegen
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

# Yjs CRDT for real-time collaborative editing
yrs = "0.21"

# Concurrent data structures
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive"] }
serde_yaml_ng = "0.10"
hcl-rs = "0.18"
indexmap = { version = "2", features = ["serde"] }

# WebSocket client (also used by CLI)
tokio-tungstenite = "0.24"

# S3 (MinIO-compatible object storage for artifact freeze)
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
wiremock = "0.6"
# Used by integration tests that share global NATS streams (e.g. PETRI_GLOBAL)
# to force sequential execution and avoid stream-state collisions.
serial_test = "3"
# `petri-application` is the runtime that fires our transitions; tests that
# need to assert a compiled prepare transition would actually EXECUTE under
# the real engine (instead of just inspecting the AIR string) construct a
# `RhaiRuntime` here — same engine, same registered helpers (`__pluck`, ...)
# the service publishes to.
petri-application = { path = "../engine/core-engine/crates/application" }
