[package]
name = "mekhan-service"
version = "0.1.0"
edition = "2021"
# Source-available under the Functional Source License (FSL-1.1-ALv2):
# any use permitted except Competing Use; converts to Apache-2.0 after 2 years.
# See /LICENSE-FSL and /LICENSING.md.
license-file = "../LICENSE-FSL"

[[bin]]
name = "mekhan"
path = "src/bin/cli/main.rs"

# Offline legacy ArangoDB dump importer (docs/32 Phase 2). Streams the dumped
# `files` / `files_to_delete` collections (NDJSON, gz-aware) into the
# legacy staging tables via Postgres COPY, then set-dedups into the
# content-addressed catalogue. Reuses mekhan_service::db::create_pool.
[[bin]]
name = "mekhan-importer"
path = "src/bin/importer/main.rs"

# Legacy-migration pipeline DRIVER (docs/32 Phase 5). Runs crawl → reconcile →
# targeted-hash → register end-to-end against a SYNTHETIC NAS (a local root dir
# standing in for an NFS mount), invoking the REAL executor-file-ops crawl/probe
# ops IN-PROCESS. Gated behind the `migration-driver` feature so the default
# mekhan-service lib/bins pull in NONE of the file-ops / OpenDAL deps.
[[bin]]
name = "legacy-migration-driver"
path = "src/bin/driver/main.rs"
required-features = ["migration-driver"]

[features]
# Pulls in the in-process file-ops op invocation + OpenDAL operator builder used
# by the `legacy-migration-driver` bin. NOT enabled by default — the platform
# service binary (`mekhan`) and library must stay free of these heavy deps.
# `aithericon-executor-storage` + `opendal` are now DEFAULT deps (the serve
# bridge needs them), so the driver feature only adds the file-ops op crates.
migration-driver = [
    "dep:aithericon-executor-file-ops",
    "dep:aithericon-executor-backend",
    "dep:tokio-util",
    "dep:tempfile",
]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query", "ws", "multipart"] }
# SSE stream generation
async-stream = "0.3"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tokio = { version = "1", features = ["full"] }
# Typed cookie jar extractor for the BFF session cookie
axum-extra = { version = "0.10", features = ["cookie"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
urlencoding = "2"

# HTTP client (for petri-lab engine)
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }

# NATS (lifecycle events, cleanup)
async-nats = "0.39"
shellexpand = "3"
futures = "0.3"

# Configuration
config = "0.15"

# LiveKit viewer-token minting (subscribe-only browser tokens). mekhan needs
# ONLY the token-signing surface — no libwebrtc / `livekit` runtime crate here.
livekit-api = { version = "0.5", default-features = false, features = ["access-token", "rustls-tls-native-roots"] }

# IDs and time
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# BFF OIDC: CSPRNG for session ids / PKCE verifier / state / nonce,
# SHA-256 for the PKCE S256 challenge, base64url for opaque ids.
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"

# JWT validation (Zitadel adapter)
jsonwebtoken = "9"

# NATS user-JWT minting for the Lab Runner Fleet (Phase 2). `nats-io-jwt`
# builds + signs scoped NATS *user* JWTs; `nkeys` (0.4.x, matching the version
# async-nats pins transitively) provides the account signing keypair.
nats-io-jwt = "0.1.1"
nkeys = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# gz decompression for the offline importer (real dump collections are
# `*.data.json.gz`). Already a transitive dep; pin it directly for the bin.
flate2 = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async trait (for dyn-dispatchable async traits)
async-trait = "0.1"

# SDK for compiling workflow graphs to AIR
aithericon-sdk = { path = "../engine/sdk" }

# Typed Resource registry (built-in types: postgres, openai, slack, s3,
# google_oauth). The resolver in petri/resource_resolver.rs looks types up
# by name via `aithericon_resources::lookup`. The `vault` feature pulls in
# `VaultResourceStore` so the CRUD handlers can write Vault-backed secret
# storage when `VAULT_ADDR` is set.
aithericon-resources = { path = "../shared/resources", features = ["vault"] }
# Cross-crate backend metadata — the wire-name enum (ExecutionBackendType),
# DispatchMode, ResourceChannel, and the &'static [BackendMeta] slice. The
# compile-time decl (validate/ref_scan/default_editor_config fn pointers)
# layers on top in `mekhan_service::backends::BackendDecl`.
aithericon-backends = { path = "../shared/backends" }
# Hexagonal transactional-email subsystem — the `Mailer` port + typed messages
# (invite/share/member/welcome) + SMTP/Brevo/log adapters, selected at runtime
# from `EmailConfig`. See `crate::notify::email`.
aithericon-email = { path = "../shared/aithericon-email" }
# Shared inference DTOs — the SINGLE source of truth for the metering record
# (`InferenceRequestLog`). The router publishes it; the inference-metering
# projector deserializes the SAME struct off the INFERENCE_METERING stream
# (model-pool P5, docs/29 §7').
inference-core = { path = "../shared/inference-core" }

# Path-format regex for the B.9 Resource CRUD validator
# (`POST /api/v1/resources`).
regex = "1"

# CSV parsing for the asset-import endpoint
# (`POST /api/v1/assets/{id}/import-csv`, docs/20 §8).
csv = "1"

schemars = "0.8"
# Publish-time validation of `resourcePool.request` against a pool kind's
# `claim_schema`. Same crate + locked version the engine's `SchemaRegistry`
# uses (`petri-application`), so the compile-time check and the runtime check
# share validator semantics.
jsonschema = "0.27"
petgraph = "0.6"

# Rhai parser for guard scope validation (Phase 3 typed-ports). We only use the
# parser surface — `Engine::compile` returns an AST we walk for identifier
# resolution; we never evaluate guard scripts here.
rhai = { version = "1.19", features = ["sync", "serde"] }

# Cron schedule parsing for the trigger dispatcher (Phase 5b). `cron` is the
# parser; `chrono-tz` provides IANA timezone resolution.
cron = "0.12"
chrono-tz = "0.10"

# Petri-net domain types (events, marking, tokens)
petri-domain = { path = "../engine/core-engine/crates/domain" }

# Petri-net API types (shared request/response DTOs for engine communication)
petri-api-types = { path = "../engine/core-engine/crates/api-types" }

# Executor backend config types (for compile-time validation of execution specs)
aithericon-executor-backend-configs = { path = "../executor/crates/executor-backend-configs", features = ["schema"] }
aithericon-executor-domain = { path = "../executor/crates/executor-domain", features = ["schema"] }
# Direct dep (transitive via backend-configs' file_ops) so the StorageConfig
# family can be registered by full path in the OpenAPI components block.
aithericon-executor-storage-types = { path = "../executor/crates/executor-storage-types", features = ["schema"] }

# --- file-server serve bridge (docs/32 Phase 3b/4) -------------------------
# DEFAULT deps (NOT feature-gated): the `data::serve` bridge mints presigned S3
# URLs and streams external s3/sftp endpoints in-process, and Phase 4 reconcile
# reads+hashes remote copies — both run in the standard `mekhan` binary. We reuse
# `executor-storage::build_operator` (the exact operator the file-ops backend
# builds) for a single s3+sftp code path. Only the s3/sftp opendal service
# features are pulled (no gcs/azblob) to bound the dep weight.
aithericon-executor-storage = { path = "../executor/crates/executor-storage", default-features = false, features = ["opendal", "opendal-s3", "opendal-sftp"] }
opendal = { version = "0.55", default-features = false, features = ["services-s3", "services-sftp"] }
# Read-side secret store: the serve bridge resolves an endpoint's `resource_ref`
# → `resource_versions.vault_path` and reads the s3/sftp credential fields via
# `SecretStore::get("<vault_path>#<field>")`. `VaultSecretStore` when
# VAULT_ADDR/VAULT_TOKEN are set; `InMemorySecretStore` (dev/test) otherwise.
aithericon-secrets = { path = "../shared/secrets", features = ["vault"] }

# --- legacy-migration-driver (feature = "migration-driver") ----------------
# Optional path deps pulled ONLY when the `legacy-migration-driver` bin is
# built. The driver invokes the REAL crawl/probe ops in-process against a Local
# StorageConfig (dev/scaffold harness); in production these same ops run inside
# a co-located runner that pulls jobs over NATS (deferred). The driver's
# pipeline logic (fold + hash + register) is transport-agnostic.
aithericon-executor-file-ops = { path = "../executor/crates/executor-file-ops", optional = true }
aithericon-executor-backend = { path = "../executor/crates/executor-backend", optional = true }
# `ChecksumAlgorithm::Sha256` for the probe op's checksum_algo flag (the
# reconcile join-key linchpin).
# Types-only (`default-features = false` → no HDF5/codec/image parser deps): the
# catalogue read path deserializes stored `file_metadata` JSONB into the real
# `fmeta` types to build the UI `FileMetadataView` (see catalogue/metadata_view.rs).
aithericon-file-metadata = { path = "../shared/file-metadata", package = "fmeta", default-features = false }
tokio-util = { version = "0.7", optional = true }
# Synthetic-NAS tempdir tree + probe run_dir. (Also a dev-dep for the test
# suite; promoted to an optional regular dep so the feature-gated driver lib
# module can use it.)
tempfile = { version = "3", optional = true }

# OpenAPI — typed spec generation for the SPA's typed client codegen
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }

# Yjs CRDT for real-time collaborative editing
yrs = "0.21"

# Concurrent data structures
dashmap = "6"

# CLI
clap = { version = "4", features = ["derive", "env"] }
serde_yaml_ng = "0.10"
hcl-rs = "0.18"
indexmap = { version = "2", features = ["serde"] }

# WebSocket client (also used by CLI)
tokio-tungstenite = "0.24"

# S3 (MinIO-compatible object storage for artifact freeze)
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
wiremock = "0.6"
# Used by integration tests that share global NATS streams (e.g. PETRI_GLOBAL)
# to force sequential execution and avoid stream-state collisions.
serial_test = "3"
# `petri-application` is the runtime that fires our transitions; tests that
# need to assert a compiled prepare transition would actually EXECUTE under
# the real engine (instead of just inspecting the AIR string) construct a
# `RhaiRuntime` here — same engine, same registered helpers (`__pluck`, ...)
# the service publishes to.
petri-application = { path = "../engine/core-engine/crates/application" }
