[package]
name = "core-engine"
version.workspace = true
edition.workspace = true

[features]
default = ["human", "executor", "executor-vault-secrets", "nomad", "slurm", "catalogue", "artifact-store"]
artifact-store = ["petri-api/artifact-store"]
catalogue = ["petri-api/catalogue"]
nomad = ["dep:petri-nomad", "petri-api/nomad"]
slurm = ["dep:petri-slurm", "petri-api/slurm"]
executor = ["dep:petri-executor", "petri-api/executor"]
executor-vault-secrets = ["executor", "petri-api/executor-vault-secrets", "dep:aithericon-secrets", "aithericon-secrets/vault"]
human = ["petri-api/human", "petri-nats/human"]

[dependencies]
petri-domain.workspace = true
petri-application.workspace = true
petri-infrastructure.workspace = true
petri-api.workspace = true

# NATS integration
petri-nats.workspace = true
async-nats.workspace = true
uuid.workspace = true
futures.workspace = true

# Optional Nomad integration
petri-nomad = { workspace = true, optional = true }

# Optional Slurm integration
petri-slurm = { workspace = true, optional = true }

# Optional Executor integration
petri-executor = { workspace = true, optional = true }

# Optional secret management (for executor vault-secrets)
aithericon-secrets = { workspace = true, optional = true }

async-trait.workspace = true
config.workspace = true
shellexpand.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
