[package]
name = "core-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["executor", "executor-vault-secrets", "nomad", "slurm", "catalogue", "artifact-store"]
# Heap profiling: builds the engine with dhat's allocator + profiler so it writes
# dhat-heap.json on graceful shutdown. Investigation-only; never in a release.
dhat-heap = ["dep:dhat"]
artifact-store = ["petri-api/artifact-store"]
catalogue = ["petri-api/catalogue"]
nomad = ["dep:petri-nomad", "petri-api/nomad"]
slurm = ["dep:petri-slurm", "petri-api/slurm"]
executor = ["dep:petri-executor", "petri-api/executor"]
executor-vault-secrets = ["executor", "petri-api/executor-vault-secrets", "dep:aithericon-secrets", "aithericon-secrets/vault"]

[dependencies]
petri-domain.workspace = true
petri-application.workspace = true
petri-infrastructure.workspace = true
petri-api.workspace = true

# NATS integration
petri-nats.workspace = true
async-nats.workspace = true
uuid.workspace = true
futures.workspace = true

# Heap profiler (feature `dhat-heap` only) — measures LOGICAL live allocations to
# investigate the engine's memory footprint under load; not built by default.
dhat = { version = "0.3", optional = true }

# Optional Nomad integration
petri-nomad = { workspace = true, optional = true }

# Optional Slurm integration
petri-slurm = { workspace = true, optional = true }

# Optional Executor integration
petri-executor = { workspace = true, optional = true }

# Optional secret management (for executor vault-secrets)
aithericon-secrets = { workspace = true, optional = true }

async-trait.workspace = true
config.workspace = true
shellexpand.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
# Heap profiler for the `heap_probe` example — measures LOGICAL live allocations
# (allocator/libc-independent), used to investigate the engine's memory footprint
# under a metric-heavy event stream. See examples/heap_probe.rs.
dhat = "0.3"
