[package]
name = "aithericon-sdk-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Derive macros for Aithericon SDK token types"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
proc-macro2 = "1.0"
heck = "0.5"
