[package]
name = "aithericon-email"
version = "0.1.0"
edition = "2021"
license = "FSL-1.1-ALv2"
authors = ["Aithericon GmbH"]
description = "Hexagonal transactional-email subsystem for the Aithericon platform — a Mailer port with Tera-rendered, strongly-typed messages and SMTP / Brevo / log adapters selected at runtime."

[dependencies]
async-trait = "0.1"
tera = "1.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# SMTP adapter (lettre). rustls to match the platform's reqwest TLS stack and
# avoid an OpenSSL/native-tls system dependency.
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "hostname",
] }

# Brevo adapter (HTTP API). Mirrors the service's reqwest feature set.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
